# zero2prod

./: Cargo.toml  README.md
.github/workflows/: general.yml
scripts/: init_db.sh
src/: main.rs
tests/: health_check.rs
